--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.4.2",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.6.1",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.4.11",
