--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.4.2",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.6.1",
     "flowbite": "^1.7.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
